<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:id="@+id/textViewInput"
                android:text="@string/input"
                android:textSize="50sp"
                android:gravity="center|end"
                android:lines="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.9"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
            <Button
                    android:id="@+id/buttonClear"
                    android:text="@string/clear"
                    style="@style/MyButton"/>
            <Button
                    android:id="@+id/buttonPlusAndMinus"
                    android:text="@string/plus_and_minus"
                    style="@style/MyButton"/>
            <Button
                    android:id="@+id/buttonPercent"
                    android:text="@string/percent"
                    style="@style/MyButton"/>
            <Button
                    android:id="@+id/buttonDetele"
                    android:text="@string/delete"
                    style="@style/MyButton"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
            <Button
                    android:id="@+id/buttonSeven"
                    android:text="@string/seven"
                    style="@style/MyButton"/>
            <Button
                    android:id="@+id/buttonEight"
                    android:text="@string/eight"
                    style="@style/MyButton"/>
            <Button
                    android:id="@+id/buttonNine"
                    android:text="@string/nine"
                    style="@style/MyButton"/>
            <Button
                    android:id="@+id/buttonDivided"
                    android:text="@string/divided"
                    style="@style/MyButton"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
            <Button
                    android:id="@+id/buttonFour"
                    android:text="@string/four"
                    style="@style/MyButton"/>
            <Button
                    android:id="@+id/buttonFive"
                    android:text="@string/five"
                    style="@style/MyButton"/>
            <Button
                    android:id="@+id/buttonSix"
                    android:text="@string/six"
                    style="@style/MyButton"/>
            <Button
                    android:id="@+id/buttonMultiplied"
                    android:text="@string/multiplied"
                    style="@style/MyButton"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
            <Button
                    android:id="@+id/buttonOne"
                    android:text="@string/one"
                    style="@style/MyButton"/>
            <Button
                    android:id="@+id/buttonTwo"
                    android:text="@string/two"
                    style="@style/MyButton"/>
            <Button
                    android:id="@+id/buttonThree"
                    android:text="@string/three"
                    style="@style/MyButton"/>
            <Button
                    android:id="@+id/buttonMinus"
                    android:text="@string/minus"
                    style="@style/MyButton"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
            <Button
                    android:id="@+id/buttonZero"
                    android:text="@string/zero"
                    style="@style/MyButton"/>
            <Button
                    android:id="@+id/buttonDot"
                    android:text="@string/dot"
                    style="@style/MyButton"/>
            <Button
                    android:id="@+id/buttonEqual"
                    android:text="@string/equal"
                    style="@style/MyButton"/>
            <Button
                    android:id="@+id/buttonPlus"
                    android:text="@string/plus"
                    style="@style/MyButton"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>